--- a/assets/kustomize/public-api/base/svc.yml
+++ b/assets/kustomize/public-api/base/svc.yml
@@ -1,16 +1,16 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: svc-public-api
-  namespace: public
+  name: public-api
+  # namespace: public
 
 spec:
-  type: ClusterIP
+  # type: ClusterIP
   ports:
   - name: public-api
     protocol: TCP
     port: 3000
     targetPort: 3000
 
-  selector:
-    app: public-api
+  # selector:
+  #   app: public-api
