--- a/assets/public-api/ing.yml
+++ b/assets/public-api/ing.yml
@@ -3,11 +3,25 @@ kind: Ingress
 metadata:
   name: ingress-public-api
   namespace: public
+  annotations:
+    kubernetes.io/ingress.global-static-ip-name: "api-static-ip"
+    networking.gke.io/managed-certificates: managed-cert
+    kubernetes.io/ingress.class: "gce"
+    kubernetes.io/ingress.allow-http: "false"
+    networking.gke.io/v1beta1.FrontendConfig: lb-http-to-https
+
 spec:
   rules:
   - host: api.USERLAB.kubelabs.tk
     http:
       paths:
+      - path: /
+        pathType: Prefix
+        backend:
+          service:
+            name: svc-public-api
+            port:
+              number: 3000
       - path: /graphql
         pathType: Prefix
         backend:
