--- a/assets/cert.yaml
+++ b/assets/cert.yaml
@@ -7,4 +7,5 @@ spec:
   domains:
     #- kubelabs2.tk
     #- cachac.kubelabs2.tk
+    #- api-stage.cachac.kubelabs2.tk
     - api.cachac.kubelabs2.tk
