--- a/assets/kustomize/public-api/base/ing-simple.yml
+++ b/assets/kustomize/public-api/base/ing-simple.yml
@@ -4,19 +4,14 @@ metadata:
   name: public-api
   # namespace: public
   annotations:
-     kubernetes.io/ingress.class: "gce"
-     kubernetes.io/ingress.allow-http: "true"
+     kubernetes.io/ingress.global-static-ip-name: "api-static-ip"
+    #  networking.gke.io/managed-certificates: managed-cert
+    #  kubernetes.io/ingress.class: "gce"
+    #  kubernetes.io/ingress.allow-http: "false"
+    #  networking.gke.io/v1beta1.FrontendConfig: lb-http-to-https
 
-    # patch: kubernetes.io/ingress.global-static-ip-name: "api-static-ip"
-
-    # tls: cert-manager.io/cluster-issuer: letsencrypt-prod
-    # redirect: networking.gke.io/v1beta1.FrontendConfig: lb-http-to-https
 
 spec:
-  tls:
-    - secretName: ssl
-      hosts:
-        - KUSTOMIZE-DEFINED
   rules:
   - host: KUSTOMIZE-DEFINED
     http:
