--- a/assets/kustomize/public-api/overlays/stage/ing-patch.yaml
+++ b/assets/kustomize/public-api/overlays/stage/ing-patch.yaml
@@ -1,6 +1,6 @@
 - op: replace
   path: /spec/rules/0/host
-  value: api-stage.<NAME>.kubelabs2.tk
+  value: api-stage.cachac.kubelabs2.tk
 - op: add
   path: /metadata/annotations/kubernetes.io~1ingress.global-static-ip-name
   value: api-static-ip
@@ -8,13 +8,12 @@
 # TLS
 - op: replace
   path: /spec/tls/0/hosts/0
-  value: api-stage.<NAME>.kubelabs2.tk
+  value: api-stage.cachac.kubelabs2.tk
 
 - op: add
   path: /metadata/annotations/cert-manager.io~1issuer
   value: letsencrypt-prod # letsencrypt-staging
 
-# HTTPS redirect
 # - op: add
 #   path: /metadata/annotations/networking.gke.io~1v1beta1.FrontendConfig
 #   value: lb-http-to-https
