--- a/assets/apps-files/tls/secret.yaml
+++ b/assets/apps-files/tls/secret.yaml
@@ -3,7 +3,7 @@ apiVersion: v1
 kind: Secret
 metadata:
   name: ssl
-  namespace: public-stage
+  # namespace: public-stage
 type: kubernetes.io/tls
 stringData:
   tls.key: ""
