--- a/assets/kustomize/public-api/overlays/production/ing-patch.yaml
+++ b/assets/kustomize/public-api/overlays/production/ing-patch.yaml
@@ -13,3 +13,10 @@
 - op: add
   path: /metadata/annotations/cert-manager.io~1issuer
   value: letsencrypt-prod # letsencrypt-staging
+
+# test-no ssl
+# - op: remove
+#   path: /metadata/annotations/cert-manager.io~1issuer
+
+# - op: remove
+#   path: /spec/tls
