--- a/assets/actions/CI-CD.yaml
+++ b/assets/actions/CI-CD.yaml
@@ -72,7 +72,8 @@ jobs:
       - uses: actions/checkout@v2
         with:
           repository: ${{ env.DEPLOY_REPO }}
-          token: ${{ secrets.DEPLOY_TOKEN }}
+          # token: ${{ secrets.DEPLOY_TOKEN }}
+          ssh-key: ${{ secrets.DEPLOY_TOKEN }}
 
       - name: Setup Kustomize
         uses: imranismail/setup-kustomize@v1
