--- a/assets/actions/CI-CD.yaml
+++ b/assets/actions/CI-CD.yaml
@@ -72,7 +72,6 @@ jobs:
       - uses: actions/checkout@v2
         with:
           repository: ${{ env.DEPLOY_REPO }}
-          # token: ${{ secrets.DEPLOY_TOKEN }}
           ssh-key: ${{ secrets.DEPLOY_TOKEN }}
 
       - name: Setup Kustomize
@@ -93,5 +92,6 @@ jobs:
         run: |
           git config --local user.email "deploy-bot@stotylabs.dev"
           git config --local user.name "Storylabs deploy-Bot"
+          git add .
           git commit -am "New image version, branch: staging, tag: ${{ env.VERSION }}"
           git push --force origin
