--- a/assets/apps-files/public-api/deploy.yml
+++ b/assets/apps-files/public-api/deploy.yml
@@ -3,10 +3,10 @@ kind: Deployment
 
 metadata:
   name: deploy-public-api
-  namespace: public
+  namespace: public-stage
 
 spec:
-  replicas: 4
+  replicas: 1
 
   selector:
     matchLabels:
