--- a/assets/apps-files/public-api/ing.yml
+++ b/assets/apps-files/public-api/ing.yml
@@ -2,13 +2,13 @@ apiVersion: networking.k8s.io/v1
 kind: Ingress
 metadata:
   name: ingress-public-api
-  namespace: public
+  namespace: public-stage
   annotations:
     kubernetes.io/ingress.global-static-ip-name: "api-static-ip"
-    networking.gke.io/managed-certificates: managed-cert
+    #networking.gke.io/managed-certificates: managed-cert
     kubernetes.io/ingress.class: "gce"
-    kubernetes.io/ingress.allow-http: "false"
-    networking.gke.io/v1beta1.FrontendConfig: lb-http-to-https
+    #kubernetes.io/ingress.allow-http: "false"
+    #networking.gke.io/v1beta1.FrontendConfig: lb-http-to-https
 
 spec:
   rules:
