--- a/assets/apps-files/public-api/svc.yml
+++ b/assets/apps-files/public-api/svc.yml
@@ -2,7 +2,7 @@ apiVersion: v1
 kind: Service
 metadata:
   name: svc-public-api
-  namespace: public
+  namespace: public-stage
 
 spec:
   type: ClusterIP
