--- a/assets/apps-files/public-api/cm.yml
+++ b/assets/apps-files/public-api/cm.yml
@@ -2,6 +2,6 @@ apiVersion: v1
 kind: ConfigMap
 metadata:
   name: cm-private-api
-  namespace: public
+  namespace: public-stage
 data:
   PRIVATE_API: http://svc-private-api.private.svc.cluster.local:3002/private
