--- a/assets/apps-files/public-api/hpa.yml
+++ b/assets/apps-files/public-api/hpa.yml
@@ -2,7 +2,7 @@ apiVersion: autoscaling/v2beta2
 kind: HorizontalPodAutoscaler
 metadata:
   name: hpa-public-api
-  namespace: public
+  namespace: public-stage
 spec:
   scaleTargetRef:
     apiVersion: apps/v1
