--- a/assets/apps-files/public-api/vol.yml
+++ b/assets/apps-files/public-api/vol.yml
@@ -14,12 +14,12 @@ apiVersion: v1
 kind: PersistentVolumeClaim
 metadata:
   name: pvc-public-api
-  namespace: public
+  namespace: public-stage
 
 spec:
   storageClassName: sc-public-api
   accessModes:
-    - ReadWriteMany
+    - ReadWriteOnce
   resources:
     requests:
       storage: 50Mi
