--- a/assets/apps-files/public-api/deploy.yml
+++ b/assets/apps-files/public-api/deploy.yml
@@ -59,5 +59,5 @@ spec:
       #   - name: vol-logs
       #     persistentVolumeClaim:
       #       claimName: pvc-public-api
-      #       claimName: fs-storage
+      #       claimName: filestore-nfs-pv
 
