--- a/assets/apps-files/public-api/ing.yml
+++ b/assets/apps-files/public-api/ing.yml
@@ -1,7 +1,7 @@
 apiVersion: networking.k8s.io/v1
 kind: Ingress
 metadata:
-  name: ingress-public-api
+  name: public-api
   namespace: public-stage
   annotations:
     kubernetes.io/ingress.global-static-ip-name: "api-static-ip"
