--- a/assets/kustomize/public-api/base/deploy.yml
+++ b/assets/kustomize/public-api/base/deploy.yml
@@ -58,5 +58,5 @@ spec:
       volumes:
         - name: vol-logs
           persistentVolumeClaim:
-            claimName: fs-storage
+            claimName: filestore-nfs-pvc
 
