--- a/assets/actions/CI-CD.yaml
+++ b/assets/actions/CI-CD.yaml
@@ -21,7 +21,7 @@ jobs:
       - uses: actions/checkout@v3 # checkout github code
         name: Checkout code
         with:
-          fetch-depth: 0
+          fetch-depth: 0 # fetch tags
 
       - name: Get TAG version
         run: echo "RELEASE_VERSION=$(git tag | sort -V | tail -1)" >> $GITHUB_ENV
