--- a/assets/apps-files/tls/ing.yml
+++ b/assets/apps-files/tls/ing.yml
@@ -4,11 +4,10 @@ metadata:
   name: public-api
   # namespace: public
   annotations:
-     kubernetes.io/ingress.class: "gce"
-     kubernetes.io/ingress.allow-http: "true"
-
+    kubernetes.io/ingress.allow-http: "true"
+    acme.cert-manager.io/http01-edit-in-place: "true"
+    #  kubernetes.io/ingress.class: "gce"
     # patch: kubernetes.io/ingress.global-static-ip-name: "api-static-ip"
-
     # tls: cert-manager.io/cluster-issuer: letsencrypt-prod
     # redirect: networking.gke.io/v1beta1.FrontendConfig: lb-http-to-https
 
@@ -18,21 +17,20 @@ spec:
       hosts:
         - KUSTOMIZE-DEFINED
   rules:
-  - host: KUSTOMIZE-DEFINED
-    http:
-      paths:
-      - path: /
-        pathType: Prefix
-        backend:
-          service:
-            name: public-api
-            port:
-              number: 3000
-      - path: /graphql
-        pathType: Prefix
-        backend:
-          service:
-            name: public-api
-            port:
-              number: 3000
-
+    - host: KUSTOMIZE-DEFINED
+      http:
+        paths:
+          - path: /
+            pathType: Prefix
+            backend:
+              service:
+                name: public-api
+                port:
+                  number: 3000
+          - path: /graphql
+            pathType: Prefix
+            backend:
+              service:
+                name: public-api
+                port:
+                  number: 3000
