--- a/assets/apps-files/public-api/ing.yml
+++ b/assets/apps-files/public-api/ing.yml
@@ -4,15 +4,20 @@ metadata:
   name: public-api
   namespace: public-stage
   annotations:
+    # GKE cluster
     kubernetes.io/ingress.global-static-ip-name: "api-static-ip"
     #networking.gke.io/managed-certificates: managed-cert
     kubernetes.io/ingress.class: "gce"
     #kubernetes.io/ingress.allow-http: "false"
     #networking.gke.io/v1beta1.FrontendConfig: lb-http-to-https
 
+    # local ingress (Minikube)
+    # nginx.ingress.kubernetes.io/rewrite-target: /
+    # kubernetes.io/ingress.class: "nginx"
+
 spec:
   rules:
-  - host: kubelabs.dev
+  - host: LABUSER.kubelabs.dev
     http:
       paths:
       - path: /
