--- a/assets/kustomize/public-api/base/deploy.yml
+++ b/assets/kustomize/public-api/base/deploy.yml
@@ -34,29 +34,16 @@ spec:
           requests:
             cpu: 10m
             memory: 50Mi
-        livenessProbe:
-          httpGet:
-            path: /
-            port: 3000
-          initialDelaySeconds: 10
-          periodSeconds: 30
-          timeoutSeconds: 5
-        readinessProbe:
-          httpGet:
-            path: /
-            port: 3000
-          initialDelaySeconds: 10
-          periodSeconds: 30
-          timeoutSeconds: 5
+
         envFrom:
           - configMapRef:
               name: cm-private-api
 
-        volumeMounts:
-          - name: vol-logs
-            mountPath: /app/logs
-      volumes:
-        - name: vol-logs
-          persistentVolumeClaim:
-            claimName: filestore-nfs-pvc
+      #   volumeMounts:
+      #     - name: vol-logs
+      #       mountPath: /app/logs
+      # volumes:
+      #   - name: vol-logs
+      #     persistentVolumeClaim:
+      #       claimName: filestore-nfs-pvc
 
