--- a/assets/argo/apps/public-api.yaml
+++ b/assets/argo/apps/public-api.yaml
@@ -10,7 +10,7 @@ spec:
     server: 'https://kubernetes.default.svc'
   source:
     path: public-api/overlays/stage/
-    repoURL: 'git@github.com:cachac/deploy-demo.git'
+    repoURL: 'git@github.com:cachac/ops.git'
     targetRevision: HEAD
   project: default
   syncPolicy:
