--- a/assets/actions/CI-CD.yaml
+++ b/assets/actions/CI-CD.yaml
@@ -48,8 +48,8 @@ jobs:
             APP_ENV=${{ secrets.APP_ENV }}
 
       # DOCKER RUN to test container
-      # - name: Build the Docker image
-      #   run: docker run --rm --name api -p 3000:3000 cachac/kubelabs_publicapi_test
+      # - name: Run test
+      #   run: docker run --rm --name api -p 3000:3000 ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}:latest
 
       # EXTRA
       # - uses: "marvinpinto/action-automatic-releases@latest"
@@ -60,8 +60,8 @@ jobs:
       #     title: ${{ env.RELEASE }}
       #     prerelease: false
 
-  OPS:
-    name: OPS
+  deploy:
+    name: deploy
     runs-on: ubuntu-latest
     needs: build
 
