--- a/assets/apps-files/public-api/ing.yml
+++ b/assets/apps-files/public-api/ing.yml
@@ -5,7 +5,7 @@ metadata:
   namespace: public-stage
   annotations:
     nginx.ingress.kubernetes.io/rewrite-target: /
-    kubernetes.io/ingress.class: "nginx"
+    # kubernetes.io/ingress.class: "nginx"
 
 spec:
   rules:
