--- a/assets/actions/CI-CD.yaml
+++ b/assets/actions/CI-CD.yaml
@@ -1,4 +1,4 @@
-name: Docker Image CI
+name: CI-CD
 
 on:
   push:
@@ -25,12 +25,21 @@ jobs:
 
       - name: Get TAG version
         run: echo "RELEASE_VERSION=$(git tag --sort=-creatordate | head -1 )" >> $GITHUB_ENV
+        # commit hash
+        # run: echo "RELEASE_VERSION=$(git rev-parse --short HEAD)" >> $GITHUB_ENV
 
-      - name: New Tag Version
+      # step 5
+      # - name: Show new tag
+      #   run: |
+      #     echo ${{ env.RELEASE_VERSION }}
+
+      - name: Show New Tag
         id: tagVersion
         run: |
           echo ${{ env.RELEASE_VERSION }}
-          echo "::set-output name=RELEASE_VERSION::${{ env.RELEASE_VERSION }}"
+          echo "RELEASE_VERSION=${{ env.RELEASE_VERSION }}" >> $GITHUB_OUTPUT
+        # set-output DEPRECATED
+        # echo "::set-output name=RELEASE_VERSION::${{ env.RELEASE_VERSION }}"
 
       - name: Login to DockerHub
         uses: docker/login-action@v2
@@ -69,13 +78,14 @@ jobs:
       VERSION: ${{ needs.build.outputs.RELEASE_VERSION }}
 
     steps:
-      - uses: actions/checkout@v3
+      - name: Checkout OPS code
+        uses: actions/checkout@v3
         with:
           repository: ${{ env.OPS_REPO }}
           ssh-key: ${{ secrets.OPS_TOKEN }}
 
       - name: Setup Kustomize
-        uses: imranismail/setup-kustomize@v1
+        uses: imranismail/setup-kustomize@v2
         with:
           kustomize-version: "3.6.1"
 
@@ -93,5 +103,5 @@ jobs:
           git config --local user.email "OPS-bot@stotylabs.dev"
           git config --local user.name "Storylabs OPS-Bot"
           git add .
-          git commit -am "New image version, branch: staging, tag: ${{ env.VERSION }}"
-          git push --force origin
+          git diff-index --quiet HEAD || git commit -am "New image version. Branch staging. tag: ${{ env.VERSION }}"
+          git push --force origin ${{ env.OPS_BRANCH }}
