--- a/assets/apps-files/public-api/cm.yml
+++ b/assets/apps-files/public-api/cm.yml
@@ -4,4 +4,4 @@ metadata:
   name: cm-private-api
   namespace: public-stage
 data:
-  PRIVATE_API: http://svc-private-api.private.svc.cluster.local:3002/private
+  PRIVATE_API: ENDPOINT
