--- a/assets/kustomize/public-api/overlays/stage/cm-patch.yaml
+++ b/assets/kustomize/public-api/overlays/stage/cm-patch.yaml
@@ -1,3 +1,3 @@
 - op: replace
   path: /data/PRIVATE_API
-  value: http://svc-private-api.private-stage.svc.cluster.local:3002/private
+  value: PROD_ENDPOINT
