mejoras en las prácticas

--- a/assets/apps-files/public-api/deploy.yaml
+++ b/assets/apps-files/public-api/deploy.yaml
@@ -17,8 +17,8 @@ spec:
       labels:
         app: public-api
     spec:
-      imagePullSecrets:
-        - name: regcred
+      #imagePullSecrets:
+      #  - name: regcred
       containers:
       - name: public-api
         image: REGISTRY/IMAGE:VERSION
