--- a/assets/kustomize/public-api/overlays/stage/ing-patch.yaml
+++ b/assets/kustomize/public-api/overlays/stage/ing-patch.yaml
@@ -2,6 +2,8 @@
   path: /spec/rules/0/host
   value: api-stage.<domain>
 
+
+# Ejemplo Let's Encrypt SSL 
 # TLS
 - op: replace
   path: /spec/tls/0/hosts/0
