--- a/assets/apps-files/public-api/ing.yaml
+++ b/assets/apps-files/public-api/ing.yaml
@@ -3,26 +3,23 @@ kind: Ingress
 metadata:
   name: public-api
   namespace: public-stage
-  annotations:
-    nginx.ingress.kubernetes.io/rewrite-target: /
-    # kubernetes.io/ingress.class: "nginx"
 
 spec:
   rules:
-  - host: api.LABUSER.kubelabs.dev
+  - host: api-stage.LABUSER.kubelabs.dev
     http:
       paths:
       - path: /
         pathType: Prefix
         backend:
           service:
-            name: svc-public-api
+            name: public-api
             port:
               number: 3000
       - path: /graphql
         pathType: Prefix
         backend:
           service:
-            name: svc-public-api
+            name: public-api
             port:
               number: 3000
