--- a/assets/kustomize/public-api/base/deploy.yml
+++ b/assets/kustomize/public-api/base/deploy.yml
@@ -21,7 +21,7 @@ spec:
         - name: regcred
       containers:
       - name: public-api
-        image: KUSTOMIZE-DEFINED
+        image: KUSTOMIZE-DEFINED   # <-------------------------- cambiar
         imagePullPolicy: Always
 
         ports:
